force-app/main/default/objects/PathAssistantStep__c/PathAssistantStep__c.object-meta.xml
<CustomObject>
    <description>Representation of PathAssistantStep metadata used to supply configuration data to the Enhanced Path LWC. Has fields like: Picklist Value Name, Guidance For Success, Key Fields, Dependent Fields, Run Flow, Flow API Name

Records can be created manually, but are also maintained via a scheduled job that runs the QueueableSyncPathAssistants class which upserts PathAssistant__c and PathAssistantStep__c records based on External Id</description>
    <label>Path Assistant Step</label>
    <nameField>
        <label>Path Assistant Step</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Path Assistant Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>