force-app/main/default/objects/PathAssistantStep__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>A concatenation of ObjectAPIName_FieldAPIName_RecordTypeAPIName_PicklistAPIValue to provide a custom key to upsert and query Path Assistant Steps with. Example: Lead_Status___MASTER__New</inlineHelpText>
    <label>ExternalId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>