force-app/main/default/objects/PathAssistantStep__c/fields/FlowApiName__c.field-meta.xml
<CustomField>
    <fullName>FlowApiName__c</fullName>
    <inlineHelpText>Which flow should run when a user attempts to update the field to this Picklist Value?</inlineHelpText>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>