force-app/main/default/objects/PathAssistantStep__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <inlineHelpText>The content that should be displayed as Guidance for Success for this Picklist Value</inlineHelpText>
    <label>Info</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>