force-app/main/default/objects/PathAssistantStep__c/fields/KeyFieldNames__c.field-meta.xml
<CustomField>
    <fullName>KeyFieldNames__c</fullName>
    <inlineHelpText>A comma separated list of Field API Names that should be shown as Key Fields for this Picklist Value</inlineHelpText>
    <label>Key Field Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>