force-app/main/default/objects/PathAssistantStep__c/fields/PathAssistant__c.field-meta.xml
<CustomField>
    <fullName>PathAssistant__c</fullName>
    <label>Path Assistant</label>
    <referenceTo>PathAssistant__c</referenceTo>
    <relationshipName>PathAssistantSteps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>