force-app/main/default/objects/PathAssistantStep__c/fields/PicklistValue__c.field-meta.xml
<CustomField>
    <fullName>PicklistValue__c</fullName>
    <inlineHelpText>The Picklist API Value this Step represents</inlineHelpText>
    <label>Picklist Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>