force-app/main/default/objects/PathAssistantStep__c/fields/RunFlow__c.field-meta.xml
<CustomField>
    <fullName>RunFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When a user attempts to update the field to this Picklist Value, should a flow run?</inlineHelpText>
    <label>Run Flow</label>
    <type>Checkbox</type>
</CustomField>